[package]
name = "pyret-requests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
serde-wasm-bindgen = "0.4.3"
reqwest = { version = "0.11.11", features = [] }

[profile.release]
lto = true
opt-level = 3